# cms_marks

./: .gitignore  README.md  apis.py  chrome.py  finetune.py  firefox.py  main.py  marks_openai.py  marks_requests.py  output.py  pyproject.toml  requirements  setting-sample.py  test.py  training,py
test/: test_output.py
